--- a/docs/csharp/misc/cs0200.md
+++ b/docs/csharp/misc/cs0200.md
@@ -6,20 +6,22 @@ f1_keywords:
 helpviewer_keywords:
 - CS0200
 ms.assetid: 1990704a-edfa-4dbd-8477-d9c7aae58c96
-ms.openlocfilehash: ba292b9b36ac0eb264d3e40b69092d4e261320e1
-ms.sourcegitcommit: 73aa9653547a1cd70ee6586221f79cc29b588ebd
+ms.openlocfilehash: 7ee26e03f6fe58ab474ced623ed0feced74d745f
+ms.sourcegitcommit: c2c1269a81ffdcfc8675bcd9a8505b1a11ffb271
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2020
-ms.locfileid: "82102008"
+ms.lasthandoff: 04/25/2020
+ms.locfileid: "82158541"
 ---
-# <a name="compiler-error-cs0200"></a><span data-ttu-id="83ab6-102">Errore del compilatore CS0200</span><span class="sxs-lookup"><span data-stu-id="83ab6-102">Compiler Error CS0200</span></span>
-<span data-ttu-id="83ab6-103">La proprietà o l'indicizzatore 'proprietà' non può essere assegnato a - è di sola lettura</span><span class="sxs-lookup"><span data-stu-id="83ab6-103">Property or indexer 'property' cannot be assigned to -- it is read only</span></span>
+# <a name="compiler-error-cs0200"></a><span data-ttu-id="1b58a-102">Errore del compilatore CS0200</span><span class="sxs-lookup"><span data-stu-id="1b58a-102">Compiler error CS0200</span></span>
 
-<span data-ttu-id="83ab6-104">È stato effettuato un tentativo di assegnare un valore a una [proprietà](../programming-guide/classes-and-structs/using-properties.md), ma la proprietà non dispone di una funzione di accesso set o l'assegnazione non rientra nel costruttore.</span><span class="sxs-lookup"><span data-stu-id="83ab6-104">An attempt was made to assign a value to a [property](../programming-guide/classes-and-structs/using-properties.md), but the property does not have a set accessor or the assignment was outside of the constructor.</span></span> <span data-ttu-id="83ab6-105">Risolvere l'errore aggiungendo una funzione di accesso set.</span><span class="sxs-lookup"><span data-stu-id="83ab6-105">Resolve the error by adding a set accessor.</span></span> <span data-ttu-id="83ab6-106">Per ulteriori informazioni, vedere [Come dichiarare e utilizzare le proprietà](../programming-guide/classes-and-structs/how-to-declare-and-use-read-write-properties.md)di scrittura in lettura .</span><span class="sxs-lookup"><span data-stu-id="83ab6-106">For more information, see [How to declare and use read write properties](../programming-guide/classes-and-structs/how-to-declare-and-use-read-write-properties.md).</span></span>
+<span data-ttu-id="1b58a-103">Non è possibile assegnare la proprietà o l'indicizzatore ' Property ' perché è di sola lettura</span><span class="sxs-lookup"><span data-stu-id="1b58a-103">Property or indexer 'property' cannot be assigned to -- it is read only</span></span>
 
-## <a name="examples"></a><span data-ttu-id="83ab6-107">Esempi</span><span class="sxs-lookup"><span data-stu-id="83ab6-107">Examples</span></span>
-<span data-ttu-id="83ab6-108">L'esempio seguente genera l'errore CS0200:</span><span class="sxs-lookup"><span data-stu-id="83ab6-108">The following sample generates CS0200:</span></span>
+<span data-ttu-id="1b58a-104">È stato effettuato un tentativo di assegnare un valore a una [Proprietà](../programming-guide/classes-and-structs/using-properties.md), ma la proprietà non dispone di una funzione di accesso set o l'assegnazione non è compresa nel costruttore.</span><span class="sxs-lookup"><span data-stu-id="1b58a-104">An attempt was made to assign a value to a [property](../programming-guide/classes-and-structs/using-properties.md), but the property does not have a set accessor or the assignment was outside of the constructor.</span></span> <span data-ttu-id="1b58a-105">Risolvere l'errore aggiungendo una funzione di accesso set.</span><span class="sxs-lookup"><span data-stu-id="1b58a-105">Resolve the error by adding a set accessor.</span></span> <span data-ttu-id="1b58a-106">Per altre informazioni, vedere [come dichiarare e usare le proprietà di lettura/scrittura](../programming-guide/classes-and-structs/how-to-declare-and-use-read-write-properties.md).</span><span class="sxs-lookup"><span data-stu-id="1b58a-106">For more information, see [How to declare and use read-write properties](../programming-guide/classes-and-structs/how-to-declare-and-use-read-write-properties.md).</span></span>
+
+## <a name="examples"></a><span data-ttu-id="1b58a-107">Esempi</span><span class="sxs-lookup"><span data-stu-id="1b58a-107">Examples</span></span>
+
+<span data-ttu-id="1b58a-108">L'esempio seguente genera l'errore CS0200:</span><span class="sxs-lookup"><span data-stu-id="1b58a-108">The following sample generates CS0200:</span></span>
 
 ```csharp
 // CS0200.cs
@@ -49,7 +51,7 @@ public class Example
 }  
 ```
 
-<span data-ttu-id="83ab6-109">Nell'esempio seguente [vengono utilizzate proprietà implementate automaticamente](../programming-guide/classes-and-structs/auto-implemented-properties.md), [inizializzatori](../programming-guide/classes-and-structs/object-and-collection-initializers.md)di oggetto e viene comunque generato l'errore CS0200:</span><span class="sxs-lookup"><span data-stu-id="83ab6-109">The following sample uses [auto-implemented properties](../programming-guide/classes-and-structs/auto-implemented-properties.md), [object initializers](../programming-guide/classes-and-structs/object-and-collection-initializers.md), and still generates CS0200:</span></span>
+<span data-ttu-id="1b58a-109">L'esempio seguente usa [proprietà implementate automaticamente](../programming-guide/classes-and-structs/auto-implemented-properties.md) e [inizializzatori di oggetto](../programming-guide/classes-and-structs/object-and-collection-initializers.md) e genera comunque CS0200:</span><span class="sxs-lookup"><span data-stu-id="1b58a-109">The following sample uses [auto-implemented properties](../programming-guide/classes-and-structs/auto-implemented-properties.md) and [object initializers](../programming-guide/classes-and-structs/object-and-collection-initializers.md) and still generates CS0200:</span></span>
 
 ```csharp
 // CS0200.cs
@@ -72,7 +74,7 @@ public class Example
 }
 ```
 
-<span data-ttu-id="83ab6-110">L'assegnazione a una proprietà o a un indicizzatore 'proprietà' di sola lettura può essere ottenuta tramite l'aggiunta di una funzione di accesso set o l'assegnazione alla proprietà nel costruttore dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="83ab6-110">Assignment to a property or indexer 'property' that is read only, can be achieved through adding a set accessor or by assigning to the property in the object's constructor.</span></span>
+<span data-ttu-id="1b58a-110">Per assegnare a una proprietà o a un indicizzatore ' Property ' di sola lettura, aggiungere una funzione di accesso set o assegnare il valore nel costruttore dell'oggetto.</span><span class="sxs-lookup"><span data-stu-id="1b58a-110">To assign to a property or indexer 'property' that's read-only, add a set accessor or assign the value in the object's constructor.</span></span>
 
 ```csharp
 public class Example
