--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,13 +1,13 @@
 ---
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
-ms.date: 04/07/2020
-ms.openlocfilehash: 2a0af0496552cc276d574bafb1e9d3b8cb5197a9
-ms.sourcegitcommit: c2c1269a81ffdcfc8675bcd9a8505b1a11ffb271
+ms.date: 04/28/2020
+ms.openlocfilehash: 15387650623870d354717aa655dd12fb7f8cfff4
+ms.sourcegitcommit: 1cb64b53eb1f253e6a3f53ca9510ef0be1fd06fe
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/25/2020
-ms.locfileid: "82158399"
+ms.lasthandoff: 04/29/2020
+ms.locfileid: "82507087"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
@@ -16,7 +16,10 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 ## <a name="aspnet-core"></a>ASP.NET Core
 
 - [Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi](#azure-microsoft-prefixed-azure-integration-packages-removed)
+- [Estensioni: modifiche dei riferimenti al pacchetto che interessano alcuni pacchetti NuGet](#extensions-package-reference-changes-affecting-some-nuget-packages)
+- [Tipi HTTP: gheppio e IIS BadHttpRequestException contrassegnati come obsoleti e sostituiti](#http-kestrel-and-iis-badhttprequestexception-types-marked-obsolete-and-replaced)
 - [SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
+- [SignalR: tipo di opzioni del protocollo dell'hub MessagePack modificato](#signalr-messagepack-hub-protocol-options-type-changed)
 - [SignalR: Metodi UseSignalR e UseConnections rimossi](#signalr-usesignalr-and-useconnections-methods-removed)
 - [File statici: tipo di contenuto CSV modificato in conforme agli standard](#static-files-csv-content-type-changed-to-standards-compliant)
 
@@ -24,7 +27,19 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
+[!INCLUDE[Extensions: Package reference changes](~/includes/core-changes/aspnetcore/5.0/extensions-package-reference-changes.md)]
+
+***
+
+[!INCLUDE[HTTP: Kestrel and IIS BadHttpRequestException types marked obsolete and replaced](~/includes/core-changes/aspnetcore/5.0/http-badhttprequestexception-obsolete.md)]
+
+***
+
 [!INCLUDE[SignalR: MessagePack Hub Protocol moved to MessagePack 2.x package](~/includes/core-changes/aspnetcore/5.0/signalr-messagepack-package.md)]
+
+***
+
+[!INCLUDE[SignalR: MessagePack Hub Protocol options type changed](~/includes/core-changes/aspnetcore/5.0/signalr-messagepack-hub-protocol-options-changed.md)]
 
 ***
 
