--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -1,13 +1,13 @@
 ---
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
-ms.date: 04/28/2020
-ms.openlocfilehash: 15387650623870d354717aa655dd12fb7f8cfff4
-ms.sourcegitcommit: 1cb64b53eb1f253e6a3f53ca9510ef0be1fd06fe
+ms.date: 04/29/2020
+ms.openlocfilehash: 67e3ee8219c600e214dbaeabab69d4ac6d1137b6
+ms.sourcegitcommit: 7370aa8203b6036cea1520021b5511d0fd994574
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2020
-ms.locfileid: "82507087"
+ms.lasthandoff: 05/02/2020
+ms.locfileid: "82728271"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
@@ -17,7 +17,9 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 - [Azure: pacchetti di integrazione di Azure con prefisso Microsoft rimossi](#azure-microsoft-prefixed-azure-integration-packages-removed)
 - [Estensioni: modifiche dei riferimenti al pacchetto che interessano alcuni pacchetti NuGet](#extensions-package-reference-changes-affecting-some-nuget-packages)
+- [HTTP: HttpClient istanze create dai codici di stato IHttpClientFactory log Integer](#http-httpclient-instances-created-by-ihttpclientfactory-log-integer-status-codes)
 - [Tipi HTTP: gheppio e IIS BadHttpRequestException contrassegnati come obsoleti e sostituiti](#http-kestrel-and-iis-badhttprequestexception-types-marked-obsolete-and-replaced)
+- [Localizzazione: classe ResourceManagerWithCultureStringLocalizer e membro dell'interfaccia WithCulture rimossi](#localization-resourcemanagerwithculturestringlocalizer-class-and-withculture-interface-member-removed)
 - [SignalR: il protocollo dell'hub MessagePack è stato spostato nel pacchetto MessagePack 2. x](#signalr-messagepack-hub-protocol-moved-to-messagepack-2x-package)
 - [SignalR: tipo di opzioni del protocollo dell'hub MessagePack modificato](#signalr-messagepack-hub-protocol-options-type-changed)
 - [SignalR: Metodi UseSignalR e UseConnections rimossi](#signalr-usesignalr-and-useconnections-methods-removed)
@@ -31,7 +33,15 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
+[!INCLUDE[HTTP: HttpClient instances created by IHttpClientFactory log integer status codes](~/includes/core-changes/aspnetcore/5.0/http-httpclient-instances-log-integer-status-codes.md)]
+
+***
+
 [!INCLUDE[HTTP: Kestrel and IIS BadHttpRequestException types marked obsolete and replaced](~/includes/core-changes/aspnetcore/5.0/http-badhttprequestexception-obsolete.md)]
+
+***
+
+[!INCLUDE[Localization: ResourceManagerWithCultureStringLocalizer class and WithCulture interface member removed](~/includes/core-changes/aspnetcore/5.0/localization-members-removed.md)]
 
 ***
 
@@ -59,7 +69,7 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
-## <a name="windows-forms"></a>Windows Form
+## <a name="windows-forms"></a>Windows Forms
 
 - [Rimossi controlli barra di stato](#removed-status-bar-controls)
 - [I metodi WinForms ora generano ArgumentException](#winforms-methods-now-throw-argumentexception)
