--- a/docs/csharp/language-reference/compiler-messages/cs0579.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0579.md
@@ -6,17 +6,17 @@ f1_keywords:
 helpviewer_keywords:
 - CS0579
 ms.assetid: 1a15af7e-60ad-4418-a493-15fdfe08e7db
-ms.openlocfilehash: 2f9df127f1e66c33f071a8acd126ce38d33d013d
-ms.sourcegitcommit: c91110ef6ee3fedb591f3d628dc17739c4a7071e
+ms.openlocfilehash: 8cf602316f51bd3d39c7c29a31aca03da1d47a36
+ms.sourcegitcommit: de7f589de07a9979b6ac28f54c3e534a617d9425
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/15/2020
-ms.locfileid: "81389071"
+ms.lasthandoff: 05/05/2020
+ms.locfileid: "82795378"
 ---
 # <a name="compiler-error-cs0579"></a>Errore del compilatore CS0579
 Attributo "attribute" duplicato  
   
- Non è possibile specificare lo stesso attributo più di una volta, a meno che l'attributo specifichi **AllowMultiple = true** in [AttributeUsage](../../language-reference/attributes/general.md).  
+ Non è possibile specificare lo stesso attributo più di una volta, a meno che l'attributo specifichi **AllowMultiple = true** in [AttributeUsage](../attributes/general.md).  
   
 ## <a name="example"></a>Esempio  
  L'esempio seguente genera l'errore CS0579.  
